Added a layout using bootstrap (old 2.3 version) and removed previous styles from html5 template

--- a/app1/app/assets/stylesheets/application.css.scss
+++ b/app1/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,8 @@
  *= require_self
  *= require_tree .
  */
+@import "bootstrap";
+body { padding-top: 20px; }
+@import "bootstrap-responsive";
+.colored { background: black; }
+.espacio { margin-top: 20px;}
