--- a/app1/app/views/home/contacto.html.erb
+++ b/app1/app/views/home/contacto.html.erb
@@ -1,7 +1,21 @@
-<h1><%= @titulo ||= "Empresa ROR" %></h1>
+<h2><%= @titulo ||= "Empresa ROR" %></h2>
+<div class="span8 offset2">
 <p>Puede contactarnos cuando quiera. Estamos 24/7 a su disposición, para lo que
 sea que necesite ahí estaremos. Sí, incluso los festivos, no tenemos nada mejor
 que hacer que ofrecerle nuestros servicios. Si quiere oir un chiste también
 puede contactarnos, tenemos a los mejores cuentachistes de nuestr propia 
 oficina. No se sienta triste por nosotros, nosotros nos sentimos tristes por
 usted</p>
+<br/>
+<%= form_tag("") do %>
+  <%= label_tag "nombre", "Nombre" %>
+  <%= text_field_tag "nombre" %>
+  <%= label_tag "email", "E-Mail" %>
+  <%= email_field_tag "email" %>
+  <%= label_tag "asunto", "Asunto" %>
+  <%= text_field_tag "asunto" %>
+  <%= label_tag "contenido", "Contenido del mensaje" %>
+  <%= text_area_tag "contenido", nil, :size => "25x10" %>
+  <%= submit_tag "Enviar", :class => "btn btn-primary" %>
+<% end %>
+</div>
